<resources>
    <string name="app_name">Muvvi</string>
    <string name="lewatiPerkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan update film baru.</string>
    <string name="Cashless">Cashless</string>
    <string name="Cashless_desc">Gunakan e-walet untuk transaksi tiket nonton.</string>
    <string name="sign_in">Sign In</string>
    <string name="username">User Name</string>
    <string name="hint_username">Input your username</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">Logo</string>
    <string name="password">Password</string>
    <string name="input_your_password">Input your password</string>
    <string name="welcome">Welcome</string>
    <string name="upload_later">Upload Nanti</string>
    <string name="save_and_next"><![CDATA[Simpan & Lanjutkan]]></string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="save">Simpan</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo">Saldo</string>
    <string name="history">History</string>
</resources>